@@ -3,7 +3,6 @@ package com.resume.resumemakerapi.helper;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 
 import org.springframework.core.io.ClassPathResource;
 
@@ -11,10 +10,7 @@ public class Template {
 
     static {
         try {
-            byte[] byteArrays = Files.readAllBytes(
-                    Path.of(new ClassPathResource("static").getFile().getAbsolutePath()+File.separator+"head-data.html")
-            );
-            HEAD = new String(byteArrays);
+            HEAD = new String(Files.readAllBytes(java.nio.file.Paths.get(new ClassPathResource("static").getFile().getAbsolutePath()+File.separator+"head-data.html")));
         } catch (IOException e) {
             e.printStackTrace();
         }
